@@ -294,6 +294,14 @@ resolve_contained_fntype (gfc_symbol * sym, gfc_namespace * ns)
 	  sym->attr.untyped = 1;
 	}
     }
+
+  if (sym->ts.type == BT_CHARACTER)
+    {
+      gfc_charlen *cl = sym->ts.cl;
+      if (!cl || !cl->length)
+	gfc_error ("Character-valued internal function '%s' at %L must "
+		   "not be assumed length", sym->name, &sym->declared_at);
+    }
 }
 
 
