@@ -1,3 +1,11 @@
+2005-11-30  Paul Thomas  <pault@gcc.gnu.org
+
+	PR fortran/24223
+	* gfortran.dg/substring_equivalence.f90: New test.
+
+	PR fortran/24705
+	* gfortran.dg/auto_internal_assumed.f90: New test.
+
 2005-11-30  Jeff Law  <law@redhat.com>
 
 	* g++.old-deja/g++.law/pr25000.C: New test.
